# Simple-ECS

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build-and-test-linux.yml  build-and-test-windows.yml  build-and-test.yml
documentation/: Doxyfile
include/Simple-ECS/: AbstractComponentHandle.hpp  ComponentHandle.hpp  ComponentStorage.hpp  ComponentTraits.hpp  Concepts.hpp  Defines.hpp  EmptyCallable.hpp  Entity.hpp  Simple-ECS.hpp  System.hpp  Typedefs.hpp  World.hpp
test/: CMakeLists.txt  CMakeSettings.json  SystemTest.cpp  TestUtility.hpp  Tests.cpp  WorldTest.cpp  main.cpp
